<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewDetalheLerDepois"
    style="@style/AppTheme.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.lerdepois.DetalheLerDepoisActivity"
    tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_detail_news"
            android:background="#000000"></View>

        <ImageView
            android:id="@+id/imagemDetalheLerDepois"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_detail_news"
            android:scaleType="centerCrop"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@drawable/imagedetalhenoticia" />

        <ImageView
            android:id="@+id/imagemBackDetalheLerDepois"
            android:layout_width="@dimen/icon_detail_news"
            android:layout_height="@dimen/icon_detail_news"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.022"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/imagemDetalheLerDepois"
            card_view:srcCompat="@drawable/ic_arrow_back_white_24dp" />

        <TextView
            android:id="@+id/textViewTituloDetalheLerDepois"
            android:layout_width="278dp"
            android:layout_height="33dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/title_news"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/title_detail_news"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.23"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/imagemBackDetalheLerDepois" />

        <TextView
            android:id="@+id/textViewSubTituloDetalheLerDepois"
            android:layout_width="273dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/subtitle_news"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/text_detail_news"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/imagemDetalheLerDepois"
            card_view:layout_constraintTop_toBottomOf="@+id/textViewTituloDetalheLerDepois" />

        <TextView
            android:id="@+id/textViewHorarioDetalheLerDepois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/hours_news"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/text_detail_news"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/textViewSubTituloDetalheLerDepois" />

        <TextView
            android:id="@+id/textViewAssuntoDetalheLerDepois"
            android:layout_width="86dp"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/pol_tica"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/text_detail_news"
            card_view:layout_constraintBottom_toBottomOf="@+id/textViewHorarioDetalheLerDepois"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/textViewHorarioDetalheLerDepois"
            card_view:layout_constraintTop_toTopOf="@+id/textViewHorarioDetalheLerDepois"
            card_view:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imagemShareDetalheLerDepois"
            android:layout_width="@dimen/icon_detail_news"
            android:layout_height="@dimen/icon_detail_news"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            card_view:layout_constraintBottom_toBottomOf="@+id/textViewAssuntoDetalheLerDepois"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/textViewAssuntoDetalheLerDepois"
            card_view:layout_constraintTop_toTopOf="@+id/textViewAssuntoDetalheLerDepois"
            card_view:layout_constraintVertical_bias="1.0"
            card_view:srcCompat="@drawable/ic_share_white_24dp" />

        <ImageView
            android:id="@+id/imagemBookMarkDetalheLerDepois"
            android:layout_width="@dimen/icon_detail_news"
            android:layout_height="@dimen/icon_detail_news"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            card_view:layout_constraintBottom_toBottomOf="@+id/imagemShareDetalheLerDepois"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.413"
            card_view:layout_constraintStart_toEndOf="@+id/imagemShareDetalheLerDepois"
            card_view:layout_constraintTop_toTopOf="@+id/imagemShareDetalheLerDepois"
            card_view:srcCompat="@drawable/ic_bookmark_white_24dp" />

        <TextView
            android:id="@+id/textViewConteudoDetalheLerDepois"
            android:layout_width="287dp"
            android:layout_height="235dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/news_detail"
            android:textColor="@color/icons"
            android:textSize="@dimen/text_detail_news"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/imagemDetalheLerDepois" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>